[package]
name = "starblast-info-rust"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
build-override.incremental = true

[dependencies]
# log = "0.4.14"
# simple_logger = "4.0.0"

# tokio = {version = "1.0", features = ["full"]}
# reqwest = {version = "0.11", features = ["json"]}
# serde = {version = "1.0", features = ["derive", "rc"]}
# url = "2.2.2"
# tokio-tungstenite = { version = "*", features = ["tls"] }

tokio = {version = "*", features = ["full"]}
reqwest = {version = "*", features = ["json"]}
serde = {version = "*", features = ["derive", "rc"]}
tokio-tungstenite = { version = "*", features = ["tls"] }
futures-util = "*"
serde_json = "*"
rand = "*"