[package]
name = "starblast-info-rust"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
build-override.incremental = true

[dependencies]
thiserror = "1"
tokio = {version = "1", features = ["full"]}
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1", features = ["derive"]}
tokio-tungstenite = { version = "*", features = ["tls"] }
futures-util = "0.3"
serde_json = "1"
rand = "0.8"

[dev-dependencies]
anyhow = "1"